@@ -1,13 +1,13 @@
 #define RUBY_VERSION "1.9.2"
-#define RUBY_PATCHLEVEL 94
+#define RUBY_PATCHLEVEL 95
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 9
 #define RUBY_VERSION_TEENY 1
 
 #define RUBY_RELEASE_YEAR 2010
 #define RUBY_RELEASE_MONTH 12
-#define RUBY_RELEASE_DAY 8
-#define RUBY_RELEASE_DATE "2010-12-08"
+#define RUBY_RELEASE_DAY 20
+#define RUBY_RELEASE_DATE "2010-12-20"
 
 #include "ruby/version.h"
 
